# ComputePipeline

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Core/: ActionResult.h  ILoader.h  IProcessor.h
src/Factories/: LoaderFactory.h  PipelineManagerFactory.h
src/Loaders/: BundleLoader.h  FileLoader.h  HttpLoader.h
src/Systems/: DecodeImageSystem.h  DecompressSystem.h  ParseJsonSystem.h  PipelineManager.h  UnknownFileSystem.h
src/Utils/: RandomSelector.h  TypeDetector.h
